--- a/entity.css
+++ b/entity.css
@@ -108,9 +108,8 @@ main{
 }
 
 .contentbutton{
-    background-color:black;
+    background-color:blue;
     color:white;
-    width:10%;
 }
 
 /* footer */
