--- a/vas.css
+++ b/vas.css
@@ -36,13 +36,15 @@
 
     --fncmargintopbtm:2%;
     --fncmarginlftrgh:2%;
-    --fncpaddingtopbtm:2%;
+    --fncpaddingtopbtm:1%;
     --fncpaddinglftrgh:2%;
 
     --colorheaderbg:black;
     --colorheaderfg:white;
     --colorfooterbg:gray;
     --colorfooterfg:white;
+    --colorfunctionbg:white;
+    --colorfunctionfg:black;
 }
 
 html *{
@@ -52,6 +54,18 @@ html *{
 }
 
 /* applies to both navbarfunction and contentfunction */
+.vss_functionwrapper{
+    /* flex-basis:var(--fbnavbarfunction); */
+    /* width:var(--widthnavbaritem); */
+    box-sizing: border-box;
+    /* margin:var(--marginbtwnvertnavbar) auto; */
+    display: flex;
+    align-items:center;
+    justify-content: space-between;
+    overflow: hidden;
+    overflow-x:auto;
+}
+
 .vss_function{
     font-size:var(--fontsizefunction);
 
@@ -60,13 +74,15 @@ html *{
     padding:var(--fncpaddingtopbtm) var(--fncpaddinglftrgh);
     
     text-align:center;
-    vertical-align: middle;
+
+    background-color:var(--colorfunctionbg);
+    color:var(--colorfunctionfg);
 
     border-right:solid 2px black;
     border-bottom:solid 2px black;
     box-shadow: 0 0 2px gray;
-    /* why required? */
-    transition-delay: 100ms;
+    /* why required?
+    transition-delay: 100ms; */
 }
 
 .vss_function:hover{
@@ -87,6 +103,7 @@ html *{
 }
 
 #vss_maintitle{
+    width:100%;
     height:var(--maintitleheight);
 }
 
@@ -121,13 +138,13 @@ html *{
 #vss_navbarfunction{
     flex-basis:var(--fbnavbarfunction);
     width:var(--widthnavbaritem);
-    box-sizing: border-box;
     margin:var(--marginbtwnvertnavbar) auto;
+    /* box-sizing: border-box;
+    
     display: flex;
     align-items:center;
     justify-content: center;
-    /* flex-wrap: wrap; */
-    overflow-x:auto;
+    overflow-x:auto; */
 }
 
 /* vss_content is a column flex with: vss_contenttitle + vss_contentdetail + vss_contentfunction */
@@ -172,17 +189,12 @@ html *{
 
 #vss_contentfunction{
     flex-basis:var(--fbcontentfunction);
-    
-    box-sizing: border-box;
     width:var(--widthcontentitem);
-
+    margin:var(--marginbtwnvertcontent) auto;
+/*     
+    box-sizing: border-box;
     display:flex;
-    /* align-items:center;  */
-    /* justify-content: center; */
-    /* margin:var(--marginbtwnvertcontent) auto; */
-    overflow-x:auto;
-    /* overflow: hidden; */
-    /* flex-wrap: wrap; */
+    overflow-x:auto; */
 }
 
 
