--- a/infinipay.css
+++ b/infinipay.css
@@ -7,11 +7,18 @@
     --colormainnavbg:gray;
     --colormainnavfg:white;
 
+    --colorlistinitbg:black;
+    --colorlistinitfg:white;
+
     --colorlistbg:white;
     --colorlistfg:black;
 
-    --colorcontentdetailbg:lightgray;
-    --colorcontentdetailfg:black;
+    --colorfunctionbg:gray;
+    --colorfunctionfg: white;
+    --colorfunctionhover:yellow;
+
+    --colorcontentdetailbg:black;
+    --colorcontentdetailfg:white;
 
     --colorfooterbg:black;
     --colorfooterfg:white;
@@ -40,6 +47,9 @@ html{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.disappear{
+    display:none;
+}
 
 .ipheader{
     height:var(--heightheader);
@@ -47,6 +57,11 @@ html{
     color:var(--colorheaderfg);
 
     font-size: var(--fontsizeheader);
+}
+
+.ipheader div{
+    padding-top:2%;
+    padding-left:2%;
 }
 
 /* ipmain is a column flex of: mainnav + maincontent */
@@ -59,7 +74,7 @@ html{
     flex-direction: column;
 }
 
-/* mainnav is a row flex of: Employee + Pay Item + Statutory Item + Process*/
+/* mainnav is a row flex of: Employee + Pay Item + Statutory Item + Process + etc */
 #mainnav{
     flex:0 0 var(--fbmainnav);
     background-color:var(--colormainnavbg);
@@ -70,21 +85,34 @@ html{
 
 /* mainnavitem is a class with row flex of: an svg and a text span */
 .mainnavitem{
-    color:var(--colormainnavfg);
-    font-size:var(--fontsizemainnav);
-    box-shadow: 0 0 2px white;
-    /* border-right:solid gray 2px; */
-    text-align:center;
     flex-grow: 1;
-
     display:flex;
     justify-content: space-evenly;
-    
+    align-items: baseline;
+
+    color:var(--colormainnavfg);
+    box-shadow: 0 0 2px white;
+
+    font-size:var(--fontsizemainnav);
+    text-align:center;
+
 }
 
 .mainnavitem:hover{
     cursor:pointer;
+    font-weight: 700;
+    color:var(--colorfunctionhover);
     font-style:italic;
+}
+
+.mainnavitem svg{
+    background-color:white;
+    align-self: center;
+}
+
+.mainnavitem div{
+    /* background-color:yellow; */
+    align-self:center;
 }
 
 .mainnavitem:last-child{
@@ -98,6 +126,7 @@ html{
     display:flex;
 }
 
+
 #contentlist{
     flex-basis:var(--fbcontentlist);
     background-color:var(--colorcontentlistbg);
@@ -108,6 +137,8 @@ html{
 
     box-sizing: border-box;
     padding:2%;
+
+    border:  var(--colorcontentdetailbg) solid 2px;
 }
 
 /* contentlist is a column flex of: listtitle + listtable */
@@ -118,11 +149,10 @@ html{
 
 #listtable{
     flex:0 0 var(--fblisttable);
-    /* border:white solid 1px; */
-    background-color:var(--colorlistbg);
-    color:var(--colorlistfg);
-    /* box-shadow: 0 0 2px gray; */
+    background-color:var(--colorlistinitbg);
+    color:var(--colorlistinitfg);
 }
+
 
 /* when list is in select element */
 .listtableinselect{
@@ -133,12 +163,26 @@ html{
 /* when list is in table element */
 .listtableintable{
     width:100%;
-    /* border: black solid 1px; */
+    background-color:var(--colorlistbg);
+    color:var(--colorlistfg);
+}
+
+.listtableintable caption{
+    box-sizing: border-box;
+    width:100%;
+    background-color:var(--colorlistinitbg);
+    color:var(--colorlistinitfg);
+    text-align: left;
+    padding:2%;
 }
 
 .listtableintable th{
     background-color:black;
     color:white;
+}
+
+.listtableintable tr:hover{
+    cursor:pointer;
 }
 
 .listtableintable th, td{
@@ -155,10 +199,67 @@ html{
     background-color:lightgray;
 }
 
+.listfunction{
+    width : 80%;
+    box-sizing: border-box;
+    margin: 2% auto;
+    padding:2%;
+    
+    background-color:var(--colorfunctionbg);
+    color:var(--colorfunctionfg);
+    border-right:2px white solid;
+    border-bottom:2px white solid;
+
+    text-align:center;
+    font-style:bold;
+}
+
+#listfunction:hover{
+    cursor:pointer;
+    font-weight: 700;
+    color:var(--colorfunctionhover);
+    font-style:italic;
+}
+
 #contentdetail{
     flex-basis:var(--fbcontentdetail);
     background-color:var(--colorcontentdetailbg);
     color:var(--colorcontentdetailfg);
+}
+
+.contentimgdiv{
+    min-height: 10%;
+    max-height: auto;
+    box-shadow : 0 0 2px gray;
+    box-sizing: border-box;
+    width : 80%;
+    margin :0 auto;
+}
+
+.contentimg{
+    max-width: 100%;
+    height :auto;
+}
+
+.contentfunction{
+    box-sizing: border-box;
+    width:90%; 
+    margin:5% auto;
+    padding:2%;
+    
+    background-color:var(--colorfunctionbg);
+    color:var(--colorfunctionfg);
+    border-right:2px solid white;
+    border-bottom:2px solid white;
+
+    text-align:center;
+}
+
+.contentfunction:hover{
+    cursor:pointer;
+    font-weight: 700;
+    color:var(--colorfunctionhover);
+    font-style:italic;
 }
 
 #contentdetaillogo{
@@ -167,10 +268,16 @@ html{
     width:100%;
 }
 
-#contentdetaillogopath{
+/* #contentdetaillogopath{
     stroke-dasharray: 1700px; /* get full length */
-    stroke-dashoffset: 2000px;
-    animation: fillline 2000ms ease forwards infinite;
+/*    stroke-dashoffset: 2000px;
+    animation: fillline 3000ms ease forwards infinite;
+} */
+
+#contentdetaillogopath{
+    stroke-dasharray: 100px; /* get full length */
+    stroke-dashoffset: 200px;
+    animation: fillline 1000ms forwards infinite;
 }
 
 @keyframes fillline{
@@ -185,4 +292,5 @@ html{
     color:var(--colorfooterfg);
 
     font-size: var(--fontsizefooter);
+    text-align: right;
 }
