--- a/trans.css
+++ b/trans.css
@@ -5,19 +5,24 @@
 
     --fbtransheader:30%;
     --fbtransdetail:50%;
-    --fbtranstotal:20%;
+    --fbtranssummary:20%;
 
-    --fbtransheadername:50%;
-    --fbtransheaderref:50%;
+    --fbtransremark:33%;
+    --fbtranstax:33%;
+    --fbtranstotal:34%;
+
+    --fbtransheadername:34%;
+    --fbtransheaderinfo:33%;
+    --fbtransheaderref:33%;
 }
 
 @media print { 
-    .mainbody{
+    body{
     width:21cm;
     height:29.7cm;
-    margin:0mm 0mm 30mm 45mm;
-    display:flex;
-    flex-direction: column;
+    margin:0 .030cm 0  .030cm;
+    /* display:flex;
+    flex-direction: column; */
     }
 }
 
@@ -30,7 +35,7 @@ header {
     /* height:var(--headerheight); */
     flex: 0 0 var(--headerheight);
     background-color:yellow;
-    border:solid black 2px;
+    border:solid black 1px;
     text-align: center;
 }
 
@@ -39,41 +44,69 @@ main{
     /* flex:0 0 var(--mainheight); */
     display:flex;
     flex-direction: column;
-    border:solid black 2px;
+    border:solid black 1px;
 }
 
 #transheader{
     flex:0 0 var(--fbtransheader);
-    border:solid black 2px;
+    border:solid black 1px;
     display:flex;
 }
 
 #transheadername{
     flex:0 0 var(--fbtransheadername);
-    background-color:green;
+    background-color:white;
+    border:solid black 1px;
 }
+
+#transheaderinfo{
+    flex:0 0 var(--fbtransheaderinfo);
+    background-color:pink;
+    border:solid black 1px;
+}
+
 #transheaderref{
     flex:0 0 var(--fbtransheaderref);
-    background-color:yellow;
+    background-color:red;
+    border:solid black 1px;
 }
 
 #transdetail{
     flex:0 0 var(--fbtransdetail);
     background-color:blue;
-    border:solid black 2px;
+    border:solid black 1px;
+    overflow-y: auto;
 }
 
-#transtotal{
-    flex: 0 0 var(--fbtranstotal);
+#transsummary{
+    flex: 0 0 var(--fbtranssummary);
     background-color:green;
-    border:solid black 2px;
+    border:solid black 1px;
+    display:flex;
+}
+
+#transremark{
+    flex:0 0 var(--fbtransremark);
+    background-color:yellow;
+    border:solid black 1px;
+}
+
+#transtax{
+    flex:0 0 var(--fbtranstax);
+    background-color:white;
+    border:solid black 1px;
+}
+#transtotal{
+    flex:0 0 var(--fbtranstotal);
+    background-color:orange;
+    border:solid black 1px;
 }
 
 footer{
     /* height:var(--footerheight); */
     flex:0 0 var(--footerheight);
-    background-color:yellow;
-    border:solid black 2px;
+    background-color:gray;
+    border:solid black 1px;
 }
 
 
