--- a/infinipay.css
+++ b/infinipay.css
@@ -17,8 +17,8 @@
     --colorfunctionfg: white;
     --colorfunctionhover:yellow;
 
-    --colorcontentdetailbg:black;
-    --colorcontentdetailfg:white;
+    --colorcontentdetailbg:white;
+    --colorcontentdetailfg:black;
 
     --colorfooterbg:black;
     --colorfooterfg:white;
