--- a/infinipay.css
+++ b/infinipay.css
@@ -1,4 +1,9 @@
 :root{
+    --heightheader:8vh;
+    --heightmain:84vh;
+    /* --heightcontenttitle:5hv; */
+    --heightfooter:8vh;
+
     --colorheaderbg:black;
     --colorheaderfg:white;
 
@@ -6,6 +11,9 @@
 
     --colormainnavbg:gray;
     --colormainnavfg:white;
+
+    --colorcontenttitlebg:black;
+    --colorcontenttitlefg:yellow;
 
     --colorlistinitbg:black;
     --colorlistinitfg:white;
@@ -17,23 +25,23 @@
     --colorfunctionfg: white;
     --colorfunctionhover:yellow;
 
+    --colorcontentdetailtitlebg:black;
+    --colorcontentdetailtitlefg:yellow;
+
     --colorcontentdetailbg:#FFE;
     --colorcontentdetailfg:black;
 
     --colorfooterbg:black;
     --colorfooterfg:white;
 
-    --heightheader:8vh;
-    --heightmain:87vh;
-    --heightfooter:5vh;
-
     --fontsizeheader:1.2em;
+    --fontsizecontenttitle:1.2em;
     --fontsizebody:1em;
     --fontsizefooter:.8em;
     --fontsizemainnav:1em;
 
-    --fbcontenttitle:0%;
-    --fbcontentbox:100%;
+    --fbcontenttitle:5%;
+    --fbcontentbox:95%;
 
     --fbcontentnav:6%;
     --fbcontentcontent:94%;
@@ -56,6 +64,7 @@ html{
 
 .ipheader{
     height:var(--heightheader);
+    box-sizing:border-box;
     background-color:var(--colorheaderbg);
     color:var(--colorheaderfg);
 
@@ -63,19 +72,20 @@ html{
 }
 
 .ipheader div{
-    padding-top:2%;
+    box-sizing: border-box;
+    padding-top:1%;
     padding-left:2%;
+    padding-bottom:1%;
 }
 
 /* ipmain is a column flex of: mainnav + maincontent */
 .ipmain{
     height:var(--heightmain);
-
     font-size: var(--fontsizebody);
 
     display:flex;
     flex-direction: column;
-
+    border:1px solid lightgray;
 }
 
 /* mainnav is a row flex of: Employee + Pay Item + Statutory Item + Process + etc */
@@ -126,6 +136,7 @@ html{
 
 /* maincontent is a column flex of: contenttitle + contentbox */
 #maincontent{
+    /* height:500px; */
     flex:0 0 var(--fbcontentcontent);
     width:100%;
     display:flex;
@@ -133,7 +144,13 @@ html{
 }
 
 #contenttitle{
+    /* height:var(--heightcontenttitle); */
+    box-sizing: border-box;
+    font-size: var(--fontsizecontenttitle);
     flex-basis:var(--fbcontenttitle);
+    background-color:var(--colorcontenttitlebg);
+    color:var(--colorcontenttitlefg);
+    padding:1%;
 }
 
 
@@ -156,6 +173,13 @@ html{
     padding:2%;
 
     border:  var(--colorcontentdetailbg) solid 2px;
+}
+
+#contentdetailtitle{
+    background-color:var(--colorcontentdetailtitlebg);
+    color: var(--colorcontentdetailtitlefg);
+    box-sizing: border-box;
+    padding:1%;
 }
 
 /* contentlist is a column flex of: listtitle + listtable */
@@ -306,9 +330,10 @@ html{
 
 .ipfooter{
     height:var(--heightfooter);
+    box-sizing: border-box;
     background-color:var(--colorfooterbg);
     color:var(--colorfooterfg);
-
+    padding:1%;
     font-size: var(--fontsizefooter);
     text-align: center;
 }
