--- a/infinipay.css
+++ b/infinipay.css
@@ -8,7 +8,7 @@
 
     --colorbordercontentbox:darkgray;
 
-    --colorcontentlistbg:rgb(185, 226, 207);
+    --colorcontentlistbg: rgb(232, 239, 240); /*rgb(185, 226, 207);*/
 
     --colormainnavbg:gray;
     --colormainnavfg:white;
