--- a/pt_main.css
+++ b/pt_main.css
@@ -4,12 +4,15 @@
     --colorTextNavBar_Menu:rgb(223, 215, 215);
     --colorContent_Title:rgb(44, 38, 38);
     --colorTextContent_Title:rgb(245, 247, 241);
-    --colorContentBoxBG:rgb(245, 250, 255);
+    --colorContentBoxBG:rgb(245, 245, 245);
     --colorContent_Detail:white;
-    --colorButtonBG:rgb(33, 150, 165);
+    --colorButtonBG:rgb(140, 127, 141);
     --colorButtonFG: white;
     --colorButtonShadow:black;
     --colorButtonFGHover:rgb(212, 226, 9);
+
+    --fontsizemain:medium;
+    --fontsizecontent:small;
 
     --fbNavBar_Logo:1;
     --fbNavBar_Menu:5;
@@ -20,7 +23,7 @@
     --heightNavBar_logo:20vh;
     --heightNavBar_Menu:80vh;
 
-    --heightMain:100vh;
+    --heightMain:100%;
     
     --heightNavBar_MenuItem:10%;
 
@@ -28,7 +31,7 @@
     --widthMain:100%;
 
     --widthNavBar:15%;
-    --widthContent:85%;
+    --widthContent:84%;
 
     --widthNavBar_Menu:100%;
 
@@ -41,9 +44,17 @@
     --fontMain:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+* {
+    box-sizing: border-box;
+}
+
+
 .html{
     background-color: var(--colorNavBar_Menu);
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size:var(--fontsizemain);
+    width:100%;
+    height:100%;
 }
 
 /* Main is a row flex of NavBar and Content */
@@ -51,12 +62,15 @@
     display: flex;
     flex-flow:row;
 
+    box-sizing:border-box;
+
     height: var(--heightMain);
     width:var(--widthMain);
 
     background-color: var(--colorNavBar_Menu);
 
     font-family:var(--fontMain);
+    ;
 }
 
 /* NavBar is a column flex of NavBar_Logo and NavBar_Menu */
@@ -152,22 +166,6 @@ table th:hover{
 }
 
 
-/* NavBar_SubMenu resides in Content_Detail (next to NavBar) */
-#NavBar_SubMenu{
-    margin-left:-20%;
-    margin-top:20%;
-    width:20%;
-    transition: margin-left .5s, opacity .3s;
-    background-color: var(--colorNavBar_Menu);
-    box-shadow: 5px 5px 2px lightgray;
-    color:var(--colorTextNavBar_Menu);
-    display: flex;
-    flex-direction: column;
-
-    position:absolute;
-}
-
-
 /* Content is a column flex of Content_Title and Content_Box */
 /* Content_Title consists of logo, content title, user */
 #Content{
@@ -184,6 +182,28 @@ table th:hover{
     position:fixed;
     left:var(--widthNavBar);
     width:var(--widthContent);
+
+
+    font-size: var(--fontsizecontent);
+}
+
+
+/* NavBar_SubMenu resides in Content_Detail (next to NavBar) */
+#NavBar_SubMenu{
+    margin-left:-20%;
+    margin-top:20%;
+    width:20%;
+    transition: margin-left .5s, opacity .3s;
+    background-color: var(--colorNavBar_Menu);
+    box-shadow: 5px 5px 2px lightgray;
+    color:var(--colorTextNavBar_Menu);
+    display: flex;
+    flex-direction: column;
+
+    position:absolute;
+
+    /* should be after #Content */
+    font-size:var(--fontsizemain);
 }
 
 /* Content_Title is a row flex of Content_TitleLogo and Content_TitleText */
@@ -196,6 +216,8 @@ table th:hover{
 
     display: flex;
     flex-flow: row;
+
+    font-size:var(--fontsizemain);
 }
 
 /* Content_Box consists of Content_List and Content_Detail */         
@@ -241,8 +263,8 @@ table th:hover{
     box-sizing: border-box;
     padding:1%;
     margin:1%;
-    border-radius: 5%;
-    
+    border-radius: 3%;
+    font-size:medium;
 }
 .FunctionButton:hover{
     cursor:default;
