--- a/vsse.css
+++ b/vsse.css
@@ -47,22 +47,20 @@
 
     --bgcolorgradient:linear-gradient(
         45deg,
+        darkgray,
         gray,
         gray,
         gray,
-        gray,
-        gray,
-        gray,
-        rgb(15, 15, 228),
-        rgb(75, 121, 212),
-        rgb(75, 121, 212),
-        rgb(133, 165, 231),
         lightgray,
-        rgb(133, 165, 231),
-        rgb(75, 121, 212),
-        rgb(75, 121, 212),
-        rgb(15, 15, 228),
-        gray
+        lightgray,
+        white,
+        white,
+        lightgray,
+        lightgray,
+        gray,
+        gray,
+        gray,
+        darkgray
     );
     /* --bgcolorgradient:linear-gradient(
         45deg,
