--- a/freshonline.css
+++ b/freshonline.css
@@ -2,7 +2,7 @@
     --fontmain: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     --heightsitetitle:5vh;
     --heightnavbar:5vh;
-    --heightcontentbox:78vh;
+    --heightcontentbox:85%  /*85vh;*/
     --heightfooter:5vh;
 
     --widthContentList:30%;
@@ -11,11 +11,16 @@
     --fbContentList:3;
     --fbContentDetail:7;
 
+    --colorbgHTML:rgb(250,255,250);
     --colorborderdiv:rgb(220, 220, 220);
-    --colormenuitemselected:rgb(200,200,200);
+    --colorbgmenuitem:rgb(21, 136, 88);
+    --colorfgmenuitem:white;
+    --colorbgmenuitemselected:rgb(250,255,250);
+    --colorfgmenuitemselected:black;
 }
 
 html {
+    background-color: var(--colorbgHTML);
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     /* font-family:var(--fontmain); */
 }
@@ -42,8 +47,10 @@ html {
     text-align: center;
     /* overflow: hidden; */
     position: relative;
-    /* height:100%; */
+    height:100%;
     /* padding:2%; */
+    background-color: var(--colorbgmenuitem);
+    color:var(--colorfgmenuitem);
 }
 
 .MenuItemSelected{
@@ -55,17 +62,31 @@ html {
 
     /* overflow: hidden; */
     position: relative;
-    background-color: var(--colormenuitemselected);
-    color:white;
+    background-color: var(--colorbgmenuitemselected);
+    color:var(--colorfgmenuitemselected);
 
     height:100%;
 }
 
 .MenuItem:hover{
-    cursor: pointer;
+    /* cursor: pointer;
     font-style: italic;
     background-color: lightgray;
-    color:white;
+    color:white; */
+
+
+    border:1px solid var(--colorborderdiv);
+    flex-grow: 1;
+    
+    text-align: center;
+    font-style: italic;
+
+    /* overflow: hidden; */
+    position: relative;
+    background-color: var(--colorbgmenuitemselected);
+    color:var(--colorfgmenuitemselected);
+
+    height:100%;
 }
 
 .MenuResourcesDropDown{
@@ -96,12 +117,14 @@ html {
 
 
 
+
+
 /* ContentBOx is a column flex of ContentList and ContentDetail */
 #ContentBox{
     height: var(--heightcontentbox);
     display: flex;
     flex-direction: row;
-
+    overflow: auto;
     /* border:1px solid var(--colorborderdiv); */
 }
 
@@ -120,8 +143,16 @@ html {
 }
 
 #Footer{
+    box-sizing: border-box;
+    
+    width:100%;
     height: var(--heightfooter);
     border:1px solid var(--colorborderdiv);
     text-align: right;
     font-size: smaller;
+    
+    position:fixed;
+    bottom:0;
+    left:0;
+    z-index: 10;
 }
