--- a/freshonline.css
+++ b/freshonline.css
@@ -44,11 +44,12 @@ html {
     border-left:1px solid var(--colorborderdiv);
     flex-grow: 1;
     
+
     text-align: center;
     /* overflow: hidden; */
     position: relative;
     height:100%;
-    /* padding:2%; */
+    padding-top:.5%;
     background-color: var(--colorbgmenuitem);
     color:var(--colorfgmenuitem);
 }
