--- a/vasweb.css
+++ b/vasweb.css
@@ -16,6 +16,7 @@ html{
 header{
     background-color: var(--colorbgheader);
     color:var(--colorfgheader);
+    box-sizing: border-box;
     padding:1% 1%;
     width:var(--widthheader);
     height:var(--heightheader);
@@ -25,5 +26,9 @@ header{
 }
 
 body{
+    margin-top:var(--heightheader);
+}
+
+#menubar{
     margin-top:var(--heightheader);
 }
