--- a/pt_project.css
+++ b/pt_project.css
@@ -1,6 +1,7 @@
 :root{
     --heightmaintitle:8vh;
     --heightptmain:90vh;
+    --colortableheaderbg:rgb(250,250,250);
 }
 
 *{
@@ -21,6 +22,11 @@ a{
 table{
     width:95%;
     border-collapse: collapse;
+}
+
+table thead tr td{
+    text-align: center;
+    background-color: var(--colortableheaderbg);
 }
 
 img{
