--- a/pt_project.css
+++ b/pt_project.css
@@ -2,6 +2,7 @@
     --heightmaintitle:8vh;
     --heightptmain:90vh;
     --colortableheaderbg:rgb(250,250,250);
+    --transitionperiod:200ms ease-in;
 }
 
 *{
@@ -38,7 +39,7 @@ img{
 }
 
 td, th{
-    padding:.5em;
+    padding:.3em;
     border:1px solid lightgray;
 
 }
@@ -54,7 +55,9 @@ td, th{
 }
 
 #pt_content{
-    flex:2;
+    transition: var(--transitionperiod);
+    transition-timing-function: ease-out;
+    flex:.5;
     background-color: darkblue;
     color:white;
     opacity: .7;
@@ -67,6 +70,10 @@ td, th{
     top:0;
     overflow: auto;
     height:var(--heightptmain);
+}
+
+#pt_content:hover{
+    flex:2;
 }
 
 #contentloadbuttondiv{
@@ -126,7 +133,7 @@ td, th{
 
 
 .mainsection{
-    margin:3% 0 3% 1%;
+    margin:5% 0 3% 1%;
 }
 
 .subsection1{
