--- a/vsse.css
+++ b/vsse.css
@@ -96,6 +96,21 @@ img {
     margin: 1rem;
 }
 
+#homesweethome {
+    text-align: center;
+    width: 30rem;
+    padding: 10px;
+    /* text-transform: capitalize; */
+    font-weight: bold;
+    font-style: italic;
+    font-size: var(--fontsizeheadertextE);
+    background: linear-gradient(45deg, #00ffff, rgb(209, 106, 10), #00ffff);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    animation: pump 1000ms infinite;
+}
+
 
 /* for tablet  and mobile-landscape */
 
@@ -142,12 +157,17 @@ img {
             background-position: right
         }
     }
-    #vsse_headeradyourad {
-        /* width: 20%; */
-        width: 50%;
+    /* #vsse_headeradyourad {
+        width: 20%;
         animation: youradslide 10s infinite alternate;
         margin-left: 15px;
         animation-delay: 10s;
+    } */
+    #vsse_headeradyourad {
+        width: 50%;
+        animation: youradslide 10s infinite alternate;
+        margin-left: 15px;
+        animation-delay: 1s;
     }
     /* @keyframes youradslide {
         0% {}
@@ -286,11 +306,12 @@ img {
     @keyframes pump {
         0% {
             transform: scale(.8);
-            transition-delay: 800ms;
+            transition-delay: 3000ms;
         }
         100% {
+            letter-spacing: 10px;
             transform: scale(1);
-            transition-delay: 800ms;
+            transition-delay: 3000ms;
         }
     }
     #vsse_navitem2 {}
